--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,9 @@
           <div class="list-group list-group-flush">
             <a href="/" class="list-group-item list-group-item-action bg-light">Dashboard</a>
             <a href="/medication" class="list-group-item list-group-item-action bg-light">Medication Schedule</a>
-            <a href="/meal" class="list-group-item list-group-item-action bg-light">Meal Timing</a>
+            <a href="/meal" class="list-group-item list-group-item-action bg-light">Meal Schedule</a>
+            <a href="/sleep" class="list-group-item list-group-item-action bg-light">Bedtime</a>
+            <a href="/toileting" class="list-group-item list-group-item-action bg-light">Toileting Schedule</a>
           </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -40,7 +42,7 @@
         <div id="page-content-wrapper">
       
           <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-            <button class="btn btn-primary" id="menu-toggle" style="margin-left: 15px;">Menu</button>
+            <button class="btn btn-primary" id="menu-toggle">Menu</button>
       
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
