--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <p>Welcome to MemoBand</p>
     <div class="card text-white bg-success mb-3" style="max-width: 16rem;">
         <div class="card-header">
-            <p class="mb-0">Your net income for this month is...</p>
+            <p class="mb-0">Sleep Time</p>
         </div>
         <div class="card-body">
             <p style="font-size: 20px;">income</p>
@@ -13,7 +13,7 @@
     </div>
     <div class="card text-white bg-info mb-3" style="max-width: 16rem;">
         <div class="card-header">
-            <p class="mb-0">Your saving goal for this month is...</p>
+            <p class="mb-0">Heart Rate</p>
         </div>
         <div class="card-body">
             <p style="font-size: 20px;">saving</p>
