--- a/templates/medication.html
+++ b/templates/medication.html
@@ -58,6 +58,10 @@
                             </label>
                         </div>
                         <div class="form-group">
+                            <label for="exampleFormControlInput1">Time</label>
+                            <input type="time" class="form-control" name="time">
+                        </div>
+                        <div class="form-group">
                             <label for="exampleFormControlInput1">Location</label>
                             <input type="text" class="form-control" name="location" placeholder="Blue box on the counter">
                         </div>
