--- a/templates/hydration.html
+++ b/templates/hydration.html
@@ -12,7 +12,7 @@
                         </div>
                         -->
                         <div class="card-body">
-                            <form method=POST action="{{ url_for('sleep') }}">
+                            <form method=POST action="{{ url_for('hydration') }}">
                                 <div class="form-group">
                                     <label for="exampleFormControlInput1">Time</label>
                                     <input type="time" class="form-control" name="time">
@@ -27,10 +27,10 @@
     </div> 
     <div class="col">
         <div class="container py-5"> 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
-                </div>
-            </div>  
+            <!--
+            <div class="cup">
+            </div> 
+            --> 
         </div>
     </div>
 </div>  
