--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,22 @@
 {% extends "base.html" %}
 {% block body %}
-<div class="container-fluid">
+<div class="container-fluid ml-4">
     <h1 class="mt-4">Dashboard</h1>
-    <div class="card text-white bg-success mb-3" style="max-width: 16rem;">
+    <br>
+    <div class="card text-white bg-dark mb-3" style="max-width: 16rem;">
         <div class="card-header">
             <p class="mb-0">Sleep Time</p>
         </div>
         <div class="card-body">
-            <p style="font-size: 20px;">income</p>
+            <p style="font-size: 20px;">8 hours on average</p>
         </div>
     </div>
-    <div class="card text-white bg-info mb-3" style="max-width: 16rem;">
+    <div class="card text-white bg-danger mb-3" style="max-width: 16rem;">
         <div class="card-header">
             <p class="mb-0">Heart Rate</p>
         </div>
         <div class="card-body">
-            <p style="font-size: 20px;">saving</p>
+            <p style="font-size: 20px;">92 bpm</p>
         </div>
     </div>
 </div>
