--- a/templates/sleep.html
+++ b/templates/sleep.html
@@ -27,11 +27,41 @@
     </div> 
     <div class="col">
         <div class="container py-5"> 
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-6">
-                </div>
-            </div>  
+            <canvas id="myChart" width="auto" height="auto"></canvas>
         </div>
     </div>
 </div>  
+<script>
+    var request = new XMLHttpRequest()
+    request.open('GET', 'https://4zw8hpfb5m.execute-api.us-east-2.amazonaws.com/prod/sleepschedule', true)
+    request.onload = function() {
+        // Begin accessing JSON data here
+        var data = JSON.parse(this.response)
+        data = data.body
+        console.log(data)
+    }
+    request.send()
+
+    var ctx = document.getElementById('myChart').getContext('2d');
+    var chart = new Chart(ctx, {
+        // The type of chart we want to create
+        type: 'bar',
+
+        // The data for our dataset
+        data: {
+            labels: ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'],
+            datasets: [{
+                label: 'Sleep Schedule (Hours)',
+                backgroundColor: 'rgb(255, 99, 132)',
+                borderColor: 'rgb(255, 99, 132)',
+                data: [7, 10, 5, 8, 3, 4, 9]
+            }]
+        },
+
+        // Configuration options go here
+        options: {
+           
+        }
+    });
+</script>
 {% endblock %}
